socket try reconnect

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -761,7 +761,15 @@
         // Connect to the Socket.IO server.
         // The connection URL has the following format, relative to the current page:
         //     http[s]://<domain>:<port>[/<namespace>]
-        var socket = io(namespace);
+        // var socket = io(namespace);
+        const socket = io(namespace, {
+          reconnection: true,             // whether to reconnect automatically
+          reconnectionAttempts: Infinity, // number of reconnection attempts before giving up
+          reconnectionDelay: 1000,        // how long to initially wait before attempting a new reconnection
+          reconnectionDelayMax: 5000,     // maximum amount of time to wait between reconnection attempts. Each attempt increases the reconnection delay by 2x along with a randomization factor
+          randomizationFactor: 0.5
+        });
+
 
         // Event handler for new connections.
         // The callback function is invoked when a connection with the
