add workaround to FAQ

--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -134,6 +134,13 @@
             </picture>
           </div>
         </div>
+        <button class="accordion">Das Spiel hängt irgendwie, was kann ich tun?</button>
+        <div class="panel">
+          <p>Es ist irgendetwas schief gegangen beim letzten Update der Seite.</p>
+          <p>Ich Arbeite an der Lösung</p>
+          <p>Lade die Seite einmal neu (du bleibst im Spiel und es kann direkt weiter gehen).</p>
+          <p>Ich bitte die Unanehmichkeit zu entschuldigen</p>
+        </div>
         <button class="accordion">Weitere Fragen?</button>
         <div class="panel">
           <p>Schau dir gerne noch mal ganz in Ruhe das Erklärvideo an</p>
