--- a/backend/app/templates/snippet/game_play_faq.html
+++ b/backend/app/templates/snippet/game_play_faq.html
@@ -28,6 +28,13 @@
             </picture>
           </div>
         </div>
+        <button class="accordion">Das Spiel hängt irgendwie, was kann ich tun?</button>
+        <div class="panel">
+          <p>Es ist irgendetwas schief gegangen beim letzten Update der Seite.</p>
+          <p>Ich Arbeite an der Lösung</p>
+          <p>Lade die Seite einmal neu (du bleibst im Spiel und es kann direkt weiter gehen).</p>
+          <p>Ich bitte die Unanehmichkeit zu entschuldigen</p>
+        </div>
         <button class="accordion">Wie werden Chips/Deckel verteilt?</button>
         <div class="panel">
           <p>Nur dem Admin (derjenige der ein Spiel erstellt hat) steht diese Funktion zur Verfügung</p>
