add sort dice for admin

--- a/backend/app/templates/snippet/adminpanel.html
+++ b/backend/app/templates/snippet/adminpanel.html
@@ -7,6 +7,9 @@
   </div>
   <div class="container justify-content-md-center justify-content-sx-center">
     <div class="row">
+      <div class="col-xs-1 col-sm-2 col-md-1">
+        <button class="btn btn-primary" id='sort_dice_id' onclick="sort_dice()">Würfel sortieren</button>
+      </div>
       <div class="col-xs-3 col-sm-3 col-md-3 col-md-offset-1 col-xs-offset-1">
         <label for="stack_count_id">Anzahl:</label>
         <input type="number" id="stack_count_id" name="stack_count_id"
@@ -36,7 +39,7 @@
   </div>
   <div class="row ">
     <div class="col-xs-11 col-md-11 col-md-offset-1 col-xs-offset-1">
-      <h2 id="admin_player">Spieler verwalten (Beta)</h2>
+      <h2 id="admin_player">Spieler verwalten</h2>
     </div>
   </div>
   <div class="row ">
