add mobile ui improvment donate

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -92,21 +92,21 @@
           <p>Ich freue mich wirklich riesig über jeden noch so kleinen Betrag.</p>
         </div>
         <div class="modal-body">
-          <div style="height:20px;" class="row col-md-offset-1">
+          <div style="height:20px;" class="row col-md-offset-1 col-xs-offset-1">
           </div>
-          <div style="height:40px;" class="row col-md-offset-1">
+          <div style="height:40px;" class="row col-md-offset-1 col-xs-offset-1">
             <a target="_blank" href="https://paypal.me/Skill3t/1,3">Ein Kölsch 1,30€ 🍺 (paypal)</a>
           </div>
-          <div style="height:40px;" class="row col-md-offset-1">
+          <div style="height:40px;" class="row col-md-offset-1 col-xs-offset-1">
             <a target="_blank" href="https://paypal.me/Skill3t/4">Ein Weizen 4€ <h3 style="display:inline;">🍺</h3> (paypal)</a>
           </div>
-          <div style="height:50px;" class="row col-md-offset-1">
+          <div style="height:50px;" class="row col-md-offset-1 col-xs-offset-1">
             <a target="_blank" href="https://paypal.me/Skill3t/9">Eine Maß 9€ <h1 style="display:inline;">🍺</h1> (paypal)</a>
           </div>
-          <div style="height:60px;" class="row col-md-offset-1">
+          <div style="height:60px;" class="row col-md-offset-1 col-xs-offset-1">
             <a target="_blank" href="https://paypal.me/Skill3t/">Beliebiger Betrag (paypal)</a>
           </div>
-          <div style="height:20px;" class="row col-md-offset-1">
+          <div style="height:20px;" class="row col-md-offset-1 col-xs-offset-1">
           </div>
         </div>
       </div>
