--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -65,6 +65,11 @@
       <a target="_blank" href= "{{ url_for('static',filename='html/datenschutz.html') }}"">
       Datenschutz</a>
     </div>
+    <div class="col-xs-5 col-md-2">
+
+      <a target="_blank" href= "https://www.instagram.com/tele_schocken/?hl=de">
+      <i class="fab fa-instagram"></i> tele-schocken</a>
+    </div>
     <div class="col-xs-6 col-md-3">
       <p>powerd by:
         <a target="_blank" href="https://coding-mission.de/">
