admin mobile UI improvment, Bugfix name waiting on

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <main>
-  <div class="header-img">
+  <div class="row ">
     <img alt="Dicecup" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/cube.jpg') }}">
   </div>
 </main>
