--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -118,15 +118,15 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
+
 <div style="height:30px;" class="row col-md-offset-1 col-xs-offset-1">
 </div>
 <div class="row ">
 </div>
 <div class="row" data-example-id="striped-table">
-  <div class="col-md-10 col-md-offset-1">
+  <div class="col-xs-12 col-md-10 col-md-offset-1">
     <table class="table table-striped table-hover" >
       <thead>
         <tr>
@@ -166,7 +166,6 @@
         </tbody>
     </table>
   </div>
-
 </div>
 
 {% include "snippet/adminpanel.html" %}
@@ -687,6 +686,11 @@
               soundEffect.play();
             }
           }
+          // set Waiting user Name
+          waitinguserstorage.innerHTML = 'Warten auf: '+juser['Name'];
+        }
+      }else{
+        if (juser['Id'] == waiting_user_id){
           // set Waiting user Name
           waitinguserstorage.innerHTML = 'Warten auf: '+juser['Name'];
         }
