--- a/backend/app/templates/snippet/adminpanel.html
+++ b/backend/app/templates/snippet/adminpanel.html
@@ -5,35 +5,41 @@
       <h2 id="admin_inforamtion">Admin</h2>
     </div>
   </div>
-  <div class="container justify-content-md-center justify-content-sx-center">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-1 col-sm-2 col-md-1">
+      <div class="col-xs-6 col-md-2 col-xs-offset-1 col-md-offset-1">
         <button class="btn btn-primary" id='sort_dice_id' onclick="sort_dice()">Würfel sortieren</button>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-md-offset-1 col-xs-offset-1">
+      <div class="col-xs-5 col-md-1">
         <label for="stack_count_id">Anzahl:</label>
         <input type="number" id="stack_count_id" name="stack_count_id"
            min="0" max="13" size="2">
       </div>
-      <div class="col-xs-5 col-sm-3 col-md-3">
-        <label for="transfer_source">Von:</label>
-        <select id="transfer_source" name="count">
-          <optgroup label="">
-            <option value="stack">Stapel</option>
-            <option value="schockaus">Schock aus</option>
-          </optgroup>
-          <optgroup id="transfer_source_user" label="Spieler">
-          </optgroup>
-        </select>
+      <div class="clearfix visible-xs-block visible-sm-block"></div>
+      <div class="col-xs-offset-1">
+        <div class="col-xs-6 col-md-2">
+          <label for="transfer_source">Von:</label>
+          <select id="transfer_source" name="count">
+            <optgroup label="">
+              <option value="stack">Stapel</option>
+              <option value="schockaus">Schock aus</option>
+            </optgroup>
+            <optgroup id="transfer_source_user" label="Spieler">
+            </optgroup>
+          </select>
+        </div>
+        <div class="col-xs-5  col-md-2">
+          <label for="transfer_target">An:</label>
+          <select id="transfer_target" name="count">
+            <option value=""></option>
+          </select>
+        </div>
       </div>
-      <div class="col-xs-4 col-sm-2 col-md-2">
-        <label for="transfer_target">An:</label>
-        <select id="transfer_target" name="count">
-          <option value=""></option>
-        </select>
-      </div>
-      <div class="col-xs-1 col-sm-2 col-md-1">
-        <button class="btn btn-primary" id='transfere_chips_id' onclick="transfer_chips()">Verteilen</button>
+      <div class="clearfix visible-xs-block visible-sm-block"></div>
+      <div class="col-xs-offset-4">
+        <div class="col-xs-7 col-md-2">
+          <button class="btn btn-primary" id='transfere_chips_id' onclick="transfer_chips()">Verteilen</button>
+        </div>
       </div>
     </div>
   </div>
@@ -42,27 +48,38 @@
       <h2 id="admin_player">Spieler verwalten</h2>
     </div>
   </div>
-  <div class="row ">
-    <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-1 col-xs-offset-1">
-      <label for="delete_player">Spieler:</label>
-      <select id="delete_player" name="count">
-        <option value=""></option>
-      </select>
-      <button class="btn btn-primary" id='delete_player_id' onclick="delete_player()">Spieler entfernen</button>
-    </div>
+  <div class="container-fluid">
+    <div class="row ">
+      <div class="col-xs-10 col-md-3 col-md-offset-1 col-xs-offset-1">
+        <form class="form-inline">
+          <div class="form-group">
+            <label for="delete_player">Spieler:</label>
+            <select id="delete_player" name="count">
+              <option value=""></option>
+            </select>
+            <button class="btn btn-primary" id='delete_player_id' onclick="delete_player()">Spieler entfernen</button>
+          </div>
+        </form>
+      </div>
 
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <label for="choose_admin">Neuen Admin wählen:</label>
-      <select id="choose_admin" name="count">
-        <option value=""></option>
-      </select>
-      <button class="btn btn-primary" id='choose_admin_id' onclick="choose_admin()">Admin wählen</button>
-    </div>
-    <div class="clearfix visible-xs-block visible-sm-block"></div>
-    <div class="col-xs-6 col-sm-4 col-md-1 col-xs-offset-1">
-      <label for="back_to_waiting">Spieler hinzufügen?</label>
-
-      <button class="btn btn-primary" id='back_to_waiting' onclick="back_to_waiting()">zurück zum Warteraum</button>
+      <div class="col-xs-10 col-xs-offset-1 col-md-3">
+        <form class="form-inline">
+          <div class="form-group">
+            <label for="choose_admin">Neuen Admin wählen:</label>
+            <select id="choose_admin" name="count">
+              <option value=""></option>
+            </select>
+            <button class="btn btn-primary" id='choose_admin_id' onclick="choose_admin()">Admin wählen</button>
+          </div>
+        </form>
+      </div>
+      <div class="clearfix visible-xs-block visible-sm-block"></div>
+      <div class="col-xs-6 col-md-3 col-xs-offset-1">
+        <div class="form-group">
+        <label for="back_to_waiting">Spieler hinzufügen?</label>
+        <button class="btn btn-primary" id='back_to_waiting' onclick="back_to_waiting()">zurück zum Warteraum</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
