put dice back to cup after chips are transfert

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -86,7 +86,7 @@
         <div class="modal-header">
           <span id="donateclose" class="close">&times;</span>
           <h2>Du willst dem Entwickler ein Bier ausgeben? 🍻</h2>
-          <p>Wenn dir Tele-Schocken gefällt und du viele schöne Stunden damit verbracht hast würde ich mich über eine Spende sehr freuen.</p>
+          <p>Wenn dir Tele-Schocken gefällt und du viele schöne Stunden damit verbracht hast würde ich mich über deine Unterstützung sehr freuen.</p>
           <p>Es sind dutzende Stunden in die Entwicklung geflossen und es fallen laufende Serverkosten an.</p>
           <p>Tele-Schocken ist für mich ein Hobby Projekt. Ich selber mag keine Werbung und will auch keine bunt blinkende Werbung schalten.</p>
           <p>Ich freue mich wirklich riesig über jeden noch so kleinen Betrag.</p>
