--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -252,8 +252,13 @@
     xhttp.onreadystatechange = function() {
       if (xhttp.readyState == XMLHttpRequest.DONE) {
         if (xhttp.status != 201){
-          var res=JSON.parse(xhttp.responseText);
-          alert(''+res.Message);
+          try {
+            var res=JSON.parse(xhttp.responseText);
+            alert(''+res.Message);
+          }
+          catch (e) {
+            alert('Allgemeiner Fehler');
+          }
         }
       }
     }
