add max stack sauerland option

--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -85,6 +85,7 @@
      <option value="12">12</option>
      <option value="13" selected="selected">13 </option>
      <option value="15">15</option>
+     <option value="21">24</option>
      <option value="24">24</option>
     </select>
   </div>
