--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <h2>Keine Lust zu lesen? Hier gehts zum Erklärvideo 👇</h2>
+              <h2>Keine Lust zu lesen??? Hier gehts zum Erklärvideo 👇</h2>
             </div>
           </div>
           <div class="row">
