--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -73,12 +73,12 @@
     </div>
   </div>
 </div>
-<div class="row col-md-offset-1 admin_interface" id="admin_interface1">
+<div class="row col-md-offset-1 admin_interface">
   <div class="col-md-9">
     <h3>Spiel starten (<b>Du kannst Spieler auch nachträglich hinzufügen</b>)</h3>
   </div>
 </div>
-<div class="row col-md-offset-1 admin_interface" id="admin_interface2">
+<div class="row col-md-offset-1 admin_interface">
   <div class="col-md-9">
     <label for="stack_max">Anzahl Chips / Deckel wählen:</label>
     <select name="stack_max" id="stack_max" class="form-select">
@@ -90,7 +90,13 @@
     </select>
   </div>
 </div>
-<div class="row col-md-offset-1 admin_interface" id="admin_interface3">
+<div class="row col-md-offset-1 admin_interface">
+  <div class="col-md-9">
+    <label for="final">Willst du ein Finale spielen?  </label>
+    <input type="checkbox" id="final_cb" name="final" value="False">
+  </div>
+</div>
+<div class="row col-md-offset-1 admin_interface">
   <div class="col-md-1" >
     <button class="btn btn-primary" id='startgame_id'onclick="startGame()" disabled>Starten</button>
     <div id="inline_button_text" >
@@ -259,6 +265,10 @@
     gameid = gameid.replace(/^"(.+)"$/,'$1');
     var stack_max = document.getElementById("stack_max").value;
 
+    var play_final_cb = document.getElementById('final_cb');
+    var play_final = play_final_cb.checked;
+
+
     var xhttp = new XMLHttpRequest();
     xhttp.open("POST", "/api/game/"+gameid+"/start");
     xhttp.setRequestHeader("Content-Type", "application/json");
@@ -275,7 +285,7 @@
         }
       }
     }
-    xhttp.send(JSON.stringify({stack_max:stack_max}));
+    xhttp.send(JSON.stringify({stack_max:stack_max, play_final:play_final}));
   }
 
   function startup(){
@@ -286,15 +296,10 @@
     var admin_id = admin_el.innerHTML;
     var setdamin = document.getElementById('admin');
     if (id != admin_id){
-      var x1 = document.getElementById("admin_interface1");
-      //Disable admin interface for none admins
-      x1.style.display = "none";
-      var x2 = document.getElementById("admin_interface2");
-      //Disable admin interface for none admins
-      x2.style.display = "none";
-      var x3 = document.getElementById("admin_interface3");
-      //Disable admin interface for none admins
-      x3.style.display = "none";
+      var all_admin_elements = document.getElementsByClassName("admin_interface");
+      for (let admin_element of all_admin_elements){
+        admin_element.style.display = "none";
+      }
     }
 
     if (id == admin_id){
